---- Changes since 1.240 ----
First version of this module, which allows simple Procmail configuration.
---- Changes since 1.260 ----
Added a message to the module's main page to detect system-level mail aliases (in /etc/aliases) that would forward email to the user to a different destination.
---- Changes since 1.280 ----
Added an option to set the date range for which autoreplies are sent.
Added a simple page for setting up an email autoresponder.
Display a warning if /etc/procmailrc is setup to always deliver to the inbox, which would prevent user-defined filters from working.
If email classified as spam is delivered to some folder by a global Procmail configuration (either in /etc/procmailrc or a Virtualmin per-domain setting), display this on the list of filters.
Changed the module name to Filter and Forward Mail.
Added a simple page for setting up forwarding.
---- Changes since 1.290 ----
Added a Module Config option to create a .forward file automatically that runs procmail, for systems that don't have procmail delivery globally enabled.
Added Module Config options to set the minimum allowed time between autoreplies, and to force use of that minimum.
---- Changes since 1.320 ----
The default From: address for autoreplies now respects the default address set in the user's address book.
---- Changes since 1.330 ----
Added a filter condition to match mail with a spam score at or above some level.