@@ -16,3 +16,4 @@ Added Module Config options to set the minimum allowed time between autoreplies,
 The default From: address for autoreplies now respects the default address set in the user's address book.
 ---- Changes since 1.330 ----
 Added a filter condition to match mail with a spam score at or above some level.
+If spam deletion above some level level is configured globally or for the user's domain, display a non-editable rule for it.
